[B]2.0.7[/B]
- addon.xml fixes for frodo
- fix control resets (by slevit)
- fixed utf coding issue
[B]2.0.6[/B]
- fixed: queue does not get updated on MPD 16.x
- added: simple caching of artist list
- fixed: sorting of playlists,artists,files
[B]2.0.5[/B]
- fixed: unable to start/connect on appletv boxes
- fixed: handling backspace keys
- added: server outputs are listed, can be enabled/disabled
- added: volume control buttons - for cases when volUP/volDOWN do not work (appletv)
[B]2.0.4[/B]
- released for eden
[B]1.0.4[/B]
- added: Polish translation thanks to Marek Lawicki
- fixed: items were queued twice when replacing queue
- improved allmusic.com album art fetcher - do not search for image when searching did not succeed previously
[B]1.0.3[/B]
- added: per-profile option to start playing MPD right after an item was queued
- fixed: MPD did not resume playing when queue was replaced
- external python compatibility: needed to rename/move mpd.py and mopidy.py
[B]1.0.2[/B]
- added: any track, dir, artist, album can be added to any (or new) playlist
- added: playlist details - we are displaying tracks, contained in selected playlist, tracks can be queued directly or removed from playlist
- added: per-profile option to stop MPD on client exit
- improved navigation (using backspace) thanks to sandos
[B]1.0.1[/B]
- changed consume radiobutton to an icon button
- fixed: navigation using arrows between player control buttons was not always working
- fixed: display song info properly when MPD is listening to stream
- added: single mode setting
- added: server settings (consume,single,repeat,random) can be forced to server when connecting
- removed: support for skins other than Confluence ('till I'll create icons for single, consume)
- removed: displaying server stats
[B]1.0.0[/B]
- added: album art fetching using allmusic.com (images can be optionaly stored/cached for further reuse)