@@ -1,0 +1,78 @@
+<?xml version="1.0" encoding="utf-8" standalone="yes"?>
+<strings>
+	<!-- settings labels -->
+	<string id="30000">MPD Host</string>
+	<string id="30001">MPD Port</string>
+	<string id="30002">Profilname</string>
+	<string id="30003">Gestoppt</string>
+	<string id="30004">Pausiert</string>
+	<string id="30005">Nicht verbunden</string>
+	<string id="30006">Spiele</string>
+	<string id="30007">Überprüfe Serververfügbarkeit, bitte warten...</string>
+	<string id="30008">Profil wählen</string>
+	<string id="30009">Verfügbar</string>
+	<string id="30010">Offline</string>
+	<string id="30011">Verbunden</string>
+	<string id="112">Einstellungen</string>
+	<string id="30110">Profil 1</string>
+	<string id="30111">Profil 2</string>
+	<string id="30112">Profil 3</string>
+	<string id="30013">Profilauswahl überspringen und immer 'Profil 1' benutzen</string>
+	<string id="30014">Generell</string>
+	<string id="30015">Verbinde mit Server</string>
+	<string id="30016">Lese Playliste</string>
+	<string id="30017">Trenne Verbindung</string>
+	<string id="30018">Zur Playliste hinzugefügt</string>
+	<string id="30019">Lese Playlisten</string>
+	<string id="30020">Lese Künstler</string>
+	<string id="30021">Playliste gesichert</string>
+	<string id="30022">Aktion wählen</string>
+	<string id="30023">Laden (Hinzufügen)</string>
+	<string id="30024">Löschen</string>
+	<string id="30025">Laden (Ersetzen)</string>
+	<string id="30026">Umbenennen</string>
+	<string id="30027">Playliste existiert</string>
+	<string id="30028">Wollen Sie überschreiben?</string>
+	<string id="30029">Bibliothek auffrischen</string>
+	<string id="30030">Playliste (Hinzufügen)</string>
+	<string id="30031">Playliste (Ersetzen)</string>
+	<string id="30032">Erneuere DB</string>
+	<string id="30033">Stream URL</string>
+	<string id="30034">Spiele Stream ab falls der MPD Server im 'Abspiel' Status ist</string>    
+	<string id="30035">Server-Password</string>
+	<string id="30036">Aus Playliste entfernen</string>
+	<string id="30037">Playliste speichern unter</string>
+	<string id="30038">Playliste löschen</string>
+	<string id="30039">Spiele Stream</string>
+	<string id="30040">Zeige beim Abspielen Songfortschritt</string>
+	<string id="30041">Aktiviert (Zeige dieses Profil im Auswahldialog)</string>
+	<string id="30043">Albencover herunterladen</string>
+	<string id="30044">Speichern/Cachen der Albencover auf Disk</string>
+	<string id="30045">Aus</string>
+	<string id="30046">Allmusic.com</string>
+	<string id="30047">Lokal</string>
+	<string id="30048">MPD Media Root (für lokale Albencover)</string>
+	<string id="30049">Filter für Bildersuche</string>
+	<string id="30050">IDLE Kommando benutzen</string>
+	<string id="30051">Benachrichtigungen aktivieren</string>
+	<string id="30052">Servereinstellungen bein Start erzwingen</string>
+	<string id="30053"> - Zufall</string>
+	<string id="30054"> - Wiederholen</string>
+	<string id="30055"> - Einzeln</string>
+	<string id="30056"> - Consume</string>
+	<string id="30057">%i Titel, Gesamtzeit %s</string>
+	<string id="30058">Beim Beenden Wiedergabe stoppen</string>
+	<string id="30059">Aus Playliste entfernen</string>
+	<string id="30060">Zur Playliste hinzufügen</string>
+	<string id="30061">Bitte Playliste wählen</string>
+	<string id="30062">Zu %s hinzugefügt</string>
+	<string id="30063">* Neue Playliste *</string>
+	<string id="30064">Wiedergabe starten nachdem Objekt hinzugefügt wurde</string>
+	<string id="200">Playliste</string>
+	<string id="201">Dateien</string>
+	<string id="202">Künstler</string>
+	<string id="203">Playlisten</string>
+	<string id="204">Playliste löschen</string>
+	<string id="205">Sichern als</string>
+</strings>
+
