@@ -54,10 +54,8 @@
             <height>38</height>
             <texture>MenuItemNF.png</texture>
           </control>         
-          
-		
           <control type="label">
-            <posx>150</posx>
+            <posx>0</posx>
             <posy>0</posy>
             <width>300</width>
             <height>38</height>
@@ -79,7 +77,7 @@
             <visible>Control.HasFocus(120)</visible>
           </control>
           <control type="label">
-            <posx>150</posx>
+            <posx>0</posx>
             <posy>0</posy>
             <width>300</width>
             <height>38</height>
