@@ -1,3 +1,7 @@
+[B]2.0.8[/B]
+- addon.xml added german translations
+- added German translations (by remschneid)
+- fixed translations for labels in Confluence skin
 [B]2.0.7[/B]
 - addon.xml fixes for frodo
 - fix control resets (by slevit)
